unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Coverage_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Engineer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Live_Event_Coverage_Timings</relationshipName>
    <type>Lookup</type>
</CustomField>