unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/End_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>End_of_Coverage__c</fullName>
    <label>End of Coverage</label>
    <type>DateTime</type>
</CustomField>