unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/LE_Account__c.field-meta.xml
<CustomField>
    <fullName>LE_Account__c</fullName>
    <formula>&quot;=hyperlink(&quot;&amp;&#39;&quot;&#39;&amp;&quot;https://brightcove.my.salesforce.com/&quot;&amp;CoverageLink__r.Account__c&amp;&#39;&quot;&#39;&amp;&#39;,&#39;&amp; &#39;&quot;&#39;&amp;CoverageLink__r.Account__r.Name&amp;&#39;&quot;&#39;&amp;&quot;)&quot;</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>