unpackaged/main/default/objects/Live_Event_Coverage_Timing__c/fields/Live_Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Link__c</fullName>
    <formula>&quot;=hyperlink(&quot;&amp;&#39;&quot;&#39;&amp;&quot;https://brightcove.my.salesforce.com/&quot;&amp;CoverageLink__c&amp;&#39;&quot;&#39;&amp;&#39;,&#39;&amp; &#39;&quot;&#39;&amp;CoverageLink__r.Name&amp;&#39;&quot;&#39;&amp;&quot;)&quot;</formula>
    <label>Live Event Link</label>
    <type>Text</type>
</CustomField>